@@ -3,30 +3,35 @@ package com.carcaddy.service.impl;
 import com.carcaddy.dto.MaintenanceDto;
 import com.carcaddy.entity.*;
 import com.carcaddy.exception.InvalidEntityException;
+import com.carcaddy.repository.CarRepository;
 import com.carcaddy.repository.MaintenanceRepository;
 import com.carcaddy.service.IMaintenanceService;
 
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
 public class MaintenanceServiceImpl implements IMaintenanceService {
 
     private final MaintenanceRepository repo;
+    private final CarRepository carRepository;
 
-    public MaintenanceServiceImpl(MaintenanceRepository repo) {
+    public MaintenanceServiceImpl(MaintenanceRepository repo,
+                                  CarRepository carRepository) {
         this.repo = repo;
+        this.carRepository = carRepository;
     }
 
-    // DTO -> Entity
-    private Maintenance convertToEntity(MaintenanceDto dto) {
+    // PURE CONVERSION (NO BUSINESS LOGIC)
+    private Maintenance convertToEntity(MaintenanceDto dto, Car car) {
+
         Maintenance m = new Maintenance();
+
         m.setMaintenanceId(dto.getMaintenanceId());
-        m.setRegistrationNumber(dto.getRegistrationNumber());
         m.setMaintenanceType(dto.getMaintenanceType());
         m.setScheduledDate(dto.getScheduledDate());
         m.setCompletedDate(dto.getCompletedDate());
@@ -34,14 +39,16 @@ public class MaintenanceServiceImpl implements IMaintenanceService {
         m.setCost(dto.getCost());
         m.setPerformedBy(dto.getPerformedBy());
         m.setStatus(dto.getStatus());
+        m.setCar(car);
+
         return m;
     }
 
-    // Entity -> DTO
     private MaintenanceDto convertToDTO(Maintenance m) {
+
         MaintenanceDto dto = new MaintenanceDto();
+
         dto.setMaintenanceId(m.getMaintenanceId());
-        dto.setRegistrationNumber(m.getRegistrationNumber());
         dto.setMaintenanceType(m.getMaintenanceType());
         dto.setScheduledDate(m.getScheduledDate());
         dto.setCompletedDate(m.getCompletedDate());
@@ -49,68 +56,188 @@ public class MaintenanceServiceImpl implements IMaintenanceService {
         dto.setCost(m.getCost());
         dto.setPerformedBy(m.getPerformedBy());
         dto.setStatus(m.getStatus());
+
+        if (m.getCar() != null) {
+            dto.setRegistrationNumber(m.getCar().getRegistrationNumber());
+        }
+
         return dto;
     }
 
-    @Override
-    public MaintenanceDto addMaintenance(MaintenanceDto dto) {
-        log.info("Adding maintenance record");
-        return convertToDTO(repo.save(convertToEntity(dto)));
+    //  BUSINESS VALIDATION: CHECK CAR EXISTS
+    private Car getCarOrThrow(String regNumber) {
+
+        log.info("Checking if car exists: {}", regNumber);
+
+        return carRepository.findById(regNumber)
+                .orElseThrow(() ->
+                        new InvalidEntityException(
+                                "Car with Registration Number " + regNumber + " not found"));
     }
 
-    @Override
-    public MaintenanceDto updateStatus(Long id, MaintenanceStatus status) {
-        Maintenance m = repo.findById(id)
-                .orElseThrow(() -> new InvalidEntityException("Maintenance ID " + id + " not found"));
+    //  BUSINESS VALIDATION: CHECK EXISTING MAINTENANCE
+    private void validateMaintenanceExists(String regNumber) {
 
-        m.setStatus(status);
+        log.info("Checking existing maintenance records for car: {}", regNumber);
+
+        List<Maintenance> list = repo.findByRegistrationNumber(regNumber);
+
+        if (!list.isEmpty()) {
+
+            log.info("Maintenance already exists for car: {}", regNumber);
+
+            throw new InvalidEntityException(
+                    "Maintenance already exists for car with Registration Number: " + regNumber
+            );
+        }
+    }
+
+    // ADD MAINTENANCE
+    @Override
+    public MaintenanceDto addMaintenance(MaintenanceDto dto) {
+
+        log.info("Adding maintenance for car: {}", dto.getRegistrationNumber());
+
+        Car car = getCarOrThrow(dto.getRegistrationNumber());
+
+        // NEW CHECK ADDED
+        validateMaintenanceExists(dto.getRegistrationNumber());
+
+        Maintenance m = convertToEntity(dto, car);
+
         return convertToDTO(repo.save(m));
     }
 
     @Override
-    public MaintenanceDto getById(Long id) {
-        return repo.findById(id)
-                .map(this::convertToDTO)
-                .orElseThrow(() -> new InvalidEntityException("Maintenance ID " + id + " not found"));
+    public MaintenanceDto scheduleRoutineMaintenance(MaintenanceDto dto) {
+
+        log.info("Scheduling routine maintenance for car: {}", dto.getRegistrationNumber());
+
+        dto.setMaintenanceType(MaintenanceType.ROUTINE);
+        dto.setStatus(MaintenanceStatus.SCHEDULED);
+
+        return addMaintenance(dto);
+    }
+
+    @Override
+    public MaintenanceDto addEmergencyMaintenance(MaintenanceDto dto) {
+
+        log.info("Adding emergency maintenance for car: {}", dto.getRegistrationNumber());
+
+        dto.setMaintenanceType(MaintenanceType.EMERGENCY);
+        dto.setStatus(MaintenanceStatus.IN_PROGRESS);
+
+        return addMaintenance(dto);
+    }
+
+    @Override
+    public MaintenanceDto updateStatus(Long id, MaintenanceStatus status) {
+
+        log.info("Updating maintenance ID {} to status {}", id, status);
+
+        Maintenance m = repo.findById(id)
+                .orElseThrow(() ->
+                        new InvalidEntityException("Maintenance ID " + id + " not found"));
+
+        m.setStatus(status);
+
+        return convertToDTO(repo.save(m));
     }
 
     @Override
     public List<MaintenanceDto> getAll() {
-        return repo.findAll()
-                .stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+
+        log.info("Fetching all maintenance records");
+
+        return repo.findAll().stream().map(this::convertToDTO).toList();
     }
 
     @Override
     public List<MaintenanceDto> getByRegNumber(String regNumber) {
+
+        log.info("Fetching maintenance for car: {}", regNumber);
+
         return repo.findByRegistrationNumber(regNumber)
-                .stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .stream().map(this::convertToDTO).toList();
     }
 
     @Override
     public List<MaintenanceDto> getByType(MaintenanceType type) {
+
+        log.info("Fetching maintenance by type: {}", type);
+
         return repo.findByMaintenanceType(type)
-                .stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .stream().map(this::convertToDTO).toList();
     }
 
     @Override
     public List<MaintenanceDto> getByStatus(MaintenanceStatus status) {
+
+        log.info("Fetching maintenance by status: {}", status);
+
         return repo.findByStatus(status)
-                .stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .stream().map(this::convertToDTO).toList();
+    }
+
+    @Override
+    public List<MaintenanceDto> getUpcomingMaintenance() {
+
+        log.info("Fetching upcoming maintenance");
+
+        return repo.findUpcoming()
+                .stream().map(this::convertToDTO).toList();
+    }
+
+    @Override
+    public List<MaintenanceDto> getOverdueMaintenance() {
+
+        log.info("Fetching overdue maintenance");
+
+        return repo.findOverdue()
+                .stream().map(this::convertToDTO).toList();
+    }
+
+    @Override
+    public double getTotalCostByCar(String regNumber) {
+
+        log.info("Calculating total maintenance cost for car: {}", regNumber);
+
+        Double total = repo.getMaintenanceCostByCar(regNumber);
+        return total != null ? total : 0.0;
+    }
+
+    @Override
+    public List<MaintenanceDto> getByDateRange(LocalDate start, LocalDate end) {
+
+        log.info("Fetching maintenance between {} and {}", start, end);
+
+        return repo.findByScheduledDateBetween(start, end)
+                .stream().map(this::convertToDTO).toList();
     }
 
     @Override
     public void delete(Long id) {
+
+        log.info("Deleting maintenance ID {}", id);
+
         if (!repo.existsById(id)) {
-            throw new InvalidEntityException("Maintenance ID " + id + " not found");
+            throw new InvalidEntityException(
+                    "Maintenance ID " + id + " not found");
         }
+
         repo.deleteById(id);
+    }
+
+    @Override
+    public MaintenanceDto getById(Long id) {
+
+        log.info("Fetching maintenance ID {}", id);
+
+        return convertToDTO(
+                repo.findById(id)
+                        .orElseThrow(() ->
+                                new InvalidEntityException(
+                                        "Maintenance ID " + id + " not found"))
+        );
     }
 }
